--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>SATHYA</groupId>
-    <artifactId>MYPROJECT</artifactId>
-    <version>5.5</version>
+    <groupId>NAFEY</groupId>
+    <artifactId>DEVOPS</artifactId>
+    <version>2.0</version>
     <packaging>war</packaging>
     <name>myproj</name>
     <properties>
@@ -51,7 +51,7 @@
 	<version>2.2</version>
 	<configuration>
 		<url>http://localhost:8080/manager/text</url>
-		<server>appserver</server>
+		<server>mytom</server>
 		<path>/myproj</path>
 	</configuration>
 </plugin>
